# zkvm-benchmarks

./: .gitignore  Makefile  README.md  analyze.py  analyze.sh  analyze_md.py  bench.sh  bench_peak_memory.sh  bench_r0.sh  bench_zkvm.sh  justfile  mem.sh  memuse  memuse.c  my_notebook.py  setup.sh  template.md.j2
.github/workflows/: bench.yaml  blake.yaml  dev.yaml  old.yaml  setup.yaml
jolt/: .gitignore  Cargo.toml
jolt/bigmem/: Cargo.toml
jolt/bigmem-guest/src/: main.rs
jolt/binary-search/: Cargo.toml
jolt/binary-search-guest/src/: lib.rs  main.rs
jolt/blake/: Cargo.toml
jolt/blake-chain/: Cargo.toml
jolt/blake-chain/src/: lib.rs  main.rs
jolt/blake/src/: lib.rs  main.rs
jolt/ec/: Cargo.toml
jolt/ec-guest/src/: lib.rs
jolt/ec/src/: lib.rs  main.rs
jolt/fib/src/: lib.rs
jolt/fibonacci-guest/: Cargo.toml
jolt/fibonacci-guest/src/: main.rs
jolt/mat-mul-guest/: Cargo.toml
jolt/mat-mul-guest/src/: lib.rs
jolt/mat-mul/src/: lib.rs  main.rs
jolt/sha2-chain-guest/: Cargo.toml
jolt/sha2-chain/src/: lib.rs  main.rs
jolt/sha2-guest/: Cargo.toml
jolt/sha2-guest/src/: main.rs
jolt/sha2/src/: lib.rs
jolt/sha3-chain/: Cargo.toml
jolt/sha3-chain/src/: lib.rs  main.rs
jolt/sha3-guest/: Cargo.toml
jolt/sha3-guest/src/: main.rs
jolt/sha3/src/: lib.rs
jolt/src/: main.rs
openvm/: .gitignore  Cargo.toml
openvm/blake/: Cargo.toml
openvm/blake-chain/: Cargo.toml
openvm/blake-chain/src/: main.rs
openvm/blake/src/: main.rs
openvm/ec/: Cargo.toml
openvm/ec-precompile/: Cargo.toml
openvm/ec-precompile/src/: main.rs
openvm/ec/src/: main.rs
openvm/fib/: Cargo.toml
openvm/fib/src/: main.rs
openvm/mat-mul/: Cargo.toml
openvm/mat-mul/src/: main.rs
openvm/sha2/: Cargo.toml
openvm/sha2-chain/: Cargo.toml
openvm/sha2-chain-precompile/: Cargo.toml
openvm/sha2-chain-precompile/src/: main.rs
openvm/sha2-chain/src/: main.rs
openvm/sha2-precompile/: Cargo.toml
openvm/sha2-precompile/src/: main.rs
openvm/sha2/src/: main.rs
openvm/sha3/: Cargo.toml
openvm/sha3-chain/: Cargo.toml
openvm/sha3-chain-precompile/: Cargo.toml
openvm/sha3-chain-precompile/src/: main.rs
openvm/sha3-chain/src/: main.rs
openvm/sha3-precompile/: Cargo.toml
openvm/sha3-precompile/src/: main.rs
openvm/sha3/src/: main.rs
openvm/src/: main.rs
risc0/blake/host/: Cargo.toml
risc0/blake/methods/guest/: Cargo.toml
risc0/blake/methods/guest/src/: main.rs
risc0/ec-precompile/: Cargo.toml
risc0/ec-precompile/methods/: Cargo.toml
risc0/ec-precompile/methods/guest/: Cargo.toml
risc0/ec-precompile/src/: main.rs
risc0/ec/methods/guest/: Cargo.toml
risc0/fib/host/: Cargo.toml
risc0/fib/host/src/: main.rs
risc0/mat-mul/host/: Cargo.toml
risc0/mat-mul/host/src/: main.rs
risc0/sha2-chain-precompile/host/: Cargo.toml
risc0/sha3-chain-precompile/host/: Cargo.toml
risc0/sha3-chain-precompile/host/src/: main.rs
risc0/sha3-chain-precompile/methods/: Cargo.toml
risc0/sha3-chain/methods/guest/: Cargo.toml
risc0/sha3-precompile/methods/guest/: Cargo.toml
risc0/sha3-precompile/methods/guest/src/: main.rs
risczero/: .gitignore
risczero/blake-chain/host/: Cargo.toml
risczero/ec-precompile/: Cargo.toml
risczero/ec-precompile/methods/: Cargo.toml
risczero/ec-precompile/src/: main.rs
risczero/ec/methods/guest/: Cargo.toml
risczero/ec/methods/guest/src/: main.rs
risczero/mat-mul/host/: Cargo.toml
risczero/sha2-chain-precompile/host/: Cargo.toml
risczero/sha2-precompile/methods/guest/: Cargo.toml
risczero/sha3-chain-precompile/methods/: Cargo.toml
risczero/sha3-precompile/methods/: Cargo.toml
risczero/sha3/host/: Cargo.toml
risczero/simple-swap/host/: Cargo.toml
scripts/: analyze.py  analyze.sh  analyze_local.py  bench.sh  check_setup.sh  just_shell.sh  machine_info.sh  setup.sh  template.md.j2  template_local.md.j2
sp1/: .gitignore  Cargo.toml  build.rs
sp1/bigmem/: Cargo.toml
sp1/binary-search/: Cargo.toml
sp1/binary-search/src/: main.rs
sp1/blake/: Cargo.toml
sp1/blake-chain/: Cargo.toml
sp1/ec/: Cargo.toml
sp1/ec-precompile/: Cargo.toml
sp1/ec-precompile/src/: main.rs
sp1/fib/: Cargo.toml
sp1/fibonacci/: Cargo.toml
sp1/mat-mul/: Cargo.toml
sp1/sha2/: Cargo.toml
sp1/sha2-chain/: Cargo.toml
sp1/sha2-chain-precompile/: Cargo.toml
sp1/sha2-chain-precompile/src/: main.rs
sp1/sha2-precompile/: Cargo.toml
sp1/sha3/: Cargo.toml
sp1/sha3-chain/: Cargo.toml
sp1/sha3-chain-precompile/: Cargo.toml
sp1/sha3-precompile/: Cargo.toml
sp1/sha3-precompile/src/: main.rs
sp1/simple-swap/: Cargo.toml
sp1/src/: main.rs
stone/: .gitignore  Cargo.toml
stone/binary-search/: Cargo.toml
stone/common/: Cargo.toml
stone/configs/: cairo_layout_params_file.json  parameter_1048576.json  parameter_131072.json  parameter_131072_256.json  parameter_134217728.json  parameter_16777216.json  parameter_2097152.json  parameter_262144.json  parameter_268435456.json  parameter_33554432.json  parameter_4194304.json  parameter_4194304_128.json  parameter_524288.json  parameter_65536_128.json  parameter_65536_256.json  parameter_65536_32.json  parameter_65536_64.json  parameter_67108864.json  parameter_8388608.json  prover_config.json
stone/ec/: Cargo.toml
stone/fib/: Cargo.toml
stone/fibonacci/: Cargo.toml
stone/keccak-builtin/: Cargo.toml
stone/programs/: fibonacci.cairo  keccak.cairo
stone/sha256/: Cargo.toml
stone/sha256-chain/: Cargo.toml
stone/sha3-builtin/: Cargo.toml
stone/src/: main.rs
stwo/: .gitignore  Cargo.toml
stwo/blake/: blake_with_opcode.cairo
stwo/blake-chain/: blake_chain_with_opcode.cairo
stwo/blake-opcode/: blake.cairo  blake2s.cairo
stwo/blake-precompile/: blake.cairo
stwo/ec/: Scarb.toml
stwo/ec/src/: lib.cairo
stwo/fib/: fibonacci.cairo
stwo/fibonacci/: Scarb.toml
stwo/fibonacci/src/: lib.cairo
stwo/keccak/: .tool-versions  Scarb.toml
stwo/keccak/src/: lib.cairo
stwo/mat_mul/: Scarb.toml
stwo/mat_mul/src/: lib.cairo
stwo/src/: main.rs  util.rs
utils/: Cargo.toml
utils/src/: lib.rs  main.rs  memory.rs
(+109 files in other folders)
