[package]
name = "jolt-benchmarks"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "sha2-chain",
    "sha3-chain",
    "sha2",
    "sha3",
    "fib",
    "mat-mul",
    "ec"
]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["host"] }
utils = { path = "../utils" }

sha2-chain-guest = { path = "./sha2-chain" }
sha3-chain-guest = { path = "./sha3-chain" }
sha2-guest = { path = "./sha2" }
sha3-guest = { path = "./sha3" }
fibonacci-guest = { path = "./fib" }
mat-mul-guest = { path = "./mat-mul" }
ec-guest = { path = "./ec" }

clap = { version = "4.5.26", features = ["derive"] } 

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "v0.5.0-optimize-mul-u64" }
