[package]
name = "openvm-benchmarks"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "fib",
    "sha2",
    "sha2-precompile",
    "sha2-chain",
    "sha3",
    "sha3-chain",
    "mat-mul",
]

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", default-features = false }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", default-features = false }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0", default-features = false }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", default-features = false }

clap = { version = "4.5.26", features = ["derive"] } 
utils = { path = "../utils" }

fib = { path = "./fib" }
sha2 = { path = "./sha2" }
sha2-precompile = { path = "./sha2-precompile" }
sha2-chain = { path = "./sha2-chain" }
sha2-chain-precompile = { path = "./sha2-chain-precompile" }
sha3 = { path = "./sha3" }
sha3-precompile = { path = "./sha3-precompile" }
sha3-chain = { path = "./sha3-chain" }
sha3-chain-precompile = { path = "./sha3-chain-precompile" }
mat-mul = { path = "./mat-mul" }

