[package]
name = "openvm-benchmarks"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "fib",
    "sha2",
    "sha2-precompile",
    "sha2-chain",
    "sha2-chain-precompile",
    "sha3",
    "sha3-precompile",
    "sha3-chain",
    "sha3-chain-precompile",
    "mat-mul", 
    "ec", 
]

[workspace.dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "f48090c9febd021f8ee0349bc929a775fb1fa3ad", default-features = false }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", default-features = false }

[dependencies]
openvm = { workspace = true }
openvm-build = { workspace = true }
openvm-sdk = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-transpiler = { workspace = true }

clap = { version = "4.5.26", features = ["derive"] } 
utils = { path = "../utils" }
