[package]
name = "stwo-script"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.5", features = ["derive"] }
utils = { path = "../utils" }
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "08ddec7125cd77104b3e0e3a84298a9d988778dd" }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "08ddec7125cd77104b3e0e3a84298a9d988778dd" }