[package]
name = "stwo-script"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.5", features = ["derive"] }
utils = { path = "../utils" }
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", features = ["std"] }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo" }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo" }