[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "utils"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.0.5", features = ["derive"] } 
serde_json = "1.0.133"
serde = { version = "1.0.197", features = ["derive"] }
nix = { version = "0.30.1", features = ["process", "signal", "user"] }
rand = "0.9.2"
