[package]
name = "ec-precompile"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { workspace = true }
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }

[features]
default = []
std = ["openvm/std"]
