[workspace]
[package]
version = "0.1.0"
name = "ec-precompile"
edition = "2021"

[dependencies]
sp1-zkvm = "5.1.1"
k256 = { version = "0.13.4", features = ["arithmetic"], default-features = false }


[patch.crates-io]
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
