[workspace]
[package]
version = "0.1.0"
name = "sha2-chain-precompile"
edition = "2021"

[dependencies]
sp1-zkvm = "5.1.1"
sha2 = { version = "0.10.8", default-features = false }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
