[workspace]
[package]
version = "0.1.0"
name = "sha3-precompile"
edition = "2021"

[dependencies]
sp1-zkvm = "4.0.1"
sha3 = { version = "0.10.8", default-features = false }

[patch.crates-io]
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
