[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "2.3.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
utils = { path = "../../../utils" }
clap = { version = "4.0.5", features = ["derive"] }
