[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
methods = { path = "../methods" }
risc0-zkvm = { version = "2.0.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
utils = { path = "../../../utils" }
