[package]
name = "blake-bench"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "2.3.1", default-features = false }
blake2 = { version = "0.10.6", default-features = false }

