[package]
name = "ecadd"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "3.0.3", default-features = false }
k256 = { version = "0.13.4", features = ["arithmetic"], default-features = false }
