[package]
name = "sha3-chain-bench"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "3.0.3", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }

