[package]
name = "sha3-bench"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "2.3.1", default-features = false, features = ["std", "unstable"] }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["keccak"] }

[patch.crates-io]
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }

