[package]
name = "ecadd"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "2.0.0", default-features = false }
ark-secp256k1 = { version = "0.5.0", default-features = false }
